--- a/QualiteLogicielFront/src/app/pages/connexion/connexion.component.html
+++ b/QualiteLogicielFront/src/app/pages/connexion/connexion.component.html
@@ -1,4 +1,4 @@
-<div class="connexion" [formGroup]="connexionForm">
+<div class="container" [formGroup]="connexionForm">
   <app-input-field formControlName="email" type="text">Mail ou matricule</app-input-field>
   <app-input-field formControlName="password" type="password">Mot de passe</app-input-field>
   <button class="button" (click)="onClickConnexion()">Connexion</button>
