--- a/QualiteLogicielFront/src/styles.scss
+++ b/QualiteLogicielFront/src/styles.scss
@@ -78,3 +78,11 @@ button {
     background: rgba(0, 0, 0, 0.2);
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
