--- a/QualiteLogicielFront/src/app/pages/accueil/accueil.component.html
+++ b/QualiteLogicielFront/src/app/pages/accueil/accueil.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<p>accueil works!</p>
+<div class="flex-center" style="flex-direction: column">
+  <app-input-field type="search" style="width: 400px">Rechercher un matériel</app-input-field>
+  <app-input-field type="search" style="width: 400px">Rechercher un compte</app-input-field>
+</div>
