--- a/QualiteLogicielFront/src/styles.scss
+++ b/QualiteLogicielFront/src/styles.scss
@@ -86,3 +86,9 @@ button {
   justify-content: center;
   height: 100%;
 }
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
