Refactorisation de la structure

--- a/QualiteLogicielFront/src/app/components/header/header.component.scss
+++ b/QualiteLogicielFront/src/app/components/header/header.component.scss
@@ -9,6 +9,7 @@ header {
     color: black;
     padding: 20px 40px;
     width: fit-content;
+    cursor: pointer;
 
     h1 {
       text-align: center;
