--- a/QualiteLogicielFront/src/app/pages/profil/profil-info/profil-info.component.html
+++ b/QualiteLogicielFront/src/app/pages/profil/profil-info/profil-info.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
-<div [formGroup]="profilForm" class="flex-center" style="flex-direction: column">
-    <app-input-field type="text" formControlName="nom">Nom</app-input-field>
-    <app-input-field type="text" formControlName="prenom">Prénom</app-input-field>
-    <app-input-field type="email" formControlName="mail">Mail</app-input-field>
-    <app-input-field type="text" formControlName="matricule">Matricule</app-input-field>
+<div class="flex-center" style="flex-direction: column">
+    <app-input-field #nom type="text" [(ngModel)]="profil.nom">Nom</app-input-field>
+    <app-input-field #prenom type="text" [(ngModel)]="profil.prenom">Prénom</app-input-field>
+    <app-input-field #mail type="email" [(ngModel)]="profil.mail">Mail</app-input-field>
+    <app-input-field #matricule type="text" [(ngModel)]="profil.matricule">Matricule</app-input-field>
     <button #button class="button" (click)="onClickModifier()">Modifier</button>
 </div>
