--- a/QualiteLogicielFront/src/app/pages/device/device-list/device-list.component.html
+++ b/QualiteLogicielFront/src/app/pages/device/device-list/device-list.component.html
@@ -1,9 +1,26 @@
 <app-header></app-header>
-<div class="flex-center">
+<div class="flex-center" style="flex-direction: column">
     <app-input-field type="search" style="width: 400px" [(ngModel)]="search">Rechercher un matériel</app-input-field>
-    <div>
-        <div *ngFor="let device of deviceList">
-            <app-device-card [device]="device"></app-device-card>
-        </div>
+    <div style="max-width: 1980px; width: 80%">
+        <table mat-table [dataSource]="deviceList" matSort style="max-width: 1980px">
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
+                <td mat-cell *matCellDef="let device"> {{device.name}} </td>
+            </ng-container>
+            <ng-container matColumnDef="ref">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Réfèrence </th>
+                <td mat-cell *matCellDef="let device"> {{device.ref}} </td>
+            </ng-container>
+            <ng-container matColumnDef="version">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
+                <td mat-cell *matCellDef="let device"> {{device.version}} </td>
+            </ng-container>
+            <ng-container matColumnDef="numTel">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Numéro de téléphone </th>
+                <td mat-cell *matCellDef="let device"> {{device.numTel}} </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let device; columns: displayedColumns;"></tr>
+        </table>
     </div>
 </div>
