--- a/QualiteLogicielFront/src/app/pages/profil/profil-list/profil-list.component.html
+++ b/QualiteLogicielFront/src/app/pages/profil/profil-list/profil-list.component.html
@@ -1,8 +1,26 @@
 <app-header></app-header>
-<div class="flex-center">
+<div class="flex-center" style="flex-direction: column">
     <app-input-field type="search" style="width: 400px" [(ngModel)]="search">Rechercher un matériel</app-input-field>
-    <div>
-        <div *ngFor="let profil of profilList">
-        </div>
+    <div style="max-width: 1980px; width: 80%">
+        <table mat-table [dataSource]="profilList" matSort style="max-width: 1980px">
+            <ng-container matColumnDef="nom">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
+                <td mat-cell *matCellDef="let profil"> {{profil.nom}} </td>
+            </ng-container>
+            <ng-container matColumnDef="prenom">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Prénom </th>
+                <td mat-cell *matCellDef="let profil"> {{profil.prenom}} </td>
+            </ng-container>
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+                <td mat-cell *matCellDef="let profil"> {{profil.email}} </td>
+            </ng-container>
+            <ng-container matColumnDef="matricule">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Matricule </th>
+                <td mat-cell *matCellDef="let profil"> {{profil.matricule}} </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let profil; columns: displayedColumns;"></tr>
+        </table>
     </div>
 </div>
