--- a/QualiteLogicielFront/src/app/pages/auth/password-change/password-change.component.html
+++ b/QualiteLogicielFront/src/app/pages/auth/password-change/password-change.component.html
@@ -1,5 +1,5 @@
 <div class="container" [formGroup]="changePasswordForm">
-    <app-input-field type="password" formControlName="newPassword">Nouveau mot de passe</app-input-field>
-    <app-input-field type="password" formControlName="confirmNewPassword">Confirmer votre mot de passe</app-input-field>
-    <button class="button" (click)="onCLickContinuer()">Changer le mot de passe</button>
+    <app-input-field type="password" [control]="changePasswordForm.controls['newPassword']">Nouveau mot de passe</app-input-field>
+    <app-input-field type="password" [control]="changePasswordForm.controls['confirmNewPassword']">Confirmer le mot de passe</app-input-field>
+    <button class="button" (click)="onCLickContinuer()" [disabled]="changePasswordForm.invalid">Changer le mot de passe</button>
 </div>
