--- a/QualiteLogicielFront/src/app/pages/device/device-add/device-add.component.html
+++ b/QualiteLogicielFront/src/app/pages/device/device-add/device-add.component.html
@@ -1,13 +1,14 @@
 <app-header></app-header>
-<div [formGroup]="materielForm" class="flex-center" style="flex-direction: column">
-    <app-input-field type="text" formControlName="nom">Nom</app-input-field>
-    <app-input-field type="text" formControlName="version">Version</app-input-field>
-    <app-input-field type="file" formControlName="ref">Référence</app-input-field>
+<div [formGroup]="deviceForm" class="flex-center" style="flex-direction: column">
+    <app-input-field type="text" [control]="deviceForm.controls['nom']">Nom</app-input-field>
+    <app-input-field type="text" [control]="deviceForm.controls['version']">Version</app-input-field>
+    <app-input-field type="text" [control]="deviceForm.controls['ref']">Référence</app-input-field>
+    <app-input-field type="text" [control]="deviceForm.controls['num']">Numéro de téléphone</app-input-field>
     <p>Image (facultatif)</p>
     <input type="file" (change)="onFileSelected($event)" formControlName="image" class="fileInput" accept="image/jpeg">
     <div class="ligne-boutons">
         <button class="button" (click)="onClickAnnuler()">Annuler</button>
-        <button class="button" (click)="onClickAjouter()">Ajouter</button>
+        <button class="button" (click)="onClickAjouter()" [disabled]="deviceForm.invalid">Ajouter</button>
     </div>
 </div>
 
