--- a/QualiteLogicielFront/src/app/pages/device/device-info/device-info.component.html
+++ b/QualiteLogicielFront/src/app/pages/device/device-info/device-info.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
-<div [formGroup]="materielForm" class="flex-center" style="flex-direction: column">
-    <app-input-field type="text" formControlName="ID">ID</app-input-field>
-    <app-input-field type="text" formControlName="nom">Nom</app-input-field>
-    <app-input-field type="text" formControlName="version">Version</app-input-field>
-    <app-input-field type="text" formControlName="ref">Référence</app-input-field>
-    <app-input-field type="text" formControlName="num">Numéro de téléphone</app-input-field>
+<div [formGroup]="deviceForm" class="flex-center" style="flex-direction: column">
+    <app-input-field type="text" [control]="deviceForm.controls['ID']">ID</app-input-field>
+    <app-input-field type="text" [control]="deviceForm.controls['nom']">Nom</app-input-field>
+    <app-input-field type="text" [control]="deviceForm.controls['version']">Version</app-input-field>
+    <app-input-field type="text" [control]="deviceForm.controls['ref']">Référence</app-input-field>
+    <app-input-field type="text" [control]="deviceForm.controls['num']">Numéro de téléphone</app-input-field>
     <button #button class="button" (click)="onClickModifier()">Modifier</button>
 </div>
