--- a/QualiteLogicielFront/src/app/pages/profil/profil-add/profil-add.component.html
+++ b/QualiteLogicielFront/src/app/pages/profil/profil-add/profil-add.component.html
@@ -1,16 +1,20 @@
 <app-header></app-header>
-<div [formGroup]="materielForm" class="flex-center" style="flex-direction: column">
-  <app-input-field #nom formControlName="nom" type="text">Nom</app-input-field>
-  <app-input-field #prenom formControlName="prenom" type="text">Prénom</app-input-field>
-  <app-input-field #mail formControlName="mail" type="email">Mail</app-input-field>
-  <app-input-field #matricule formControlName="matricule" type="text">Matricule</app-input-field>
-  <select name="role" class="form-select" id="role-select">
-    <option value="">Choisir un rôle</option>
-    <option value="emprunteur">Emprunteur</option>
-    <option value="admin">Administrateur</option>
-  </select>
+<div [formGroup]="profilForm" class="flex-center" style="flex-direction: column">
+  <app-input-field [control]="profilForm.controls['nom']" type="text">Nom</app-input-field>
+  <app-input-field [control]="profilForm.controls['prenom']" type="text">Prénom</app-input-field>
+  <app-input-field [control]="profilForm.controls['email']" type="text">Mail</app-input-field>
+  <app-input-field [control]="profilForm.controls['matricule']" type="text">Matricule</app-input-field>
+
+  <mat-form-field style="width: 300px">
+    <mat-label>Rôle</mat-label>
+    <mat-select formControlName="role">
+      <mat-option *ngFor="let role of Roles" [value]="role">{{role.name}}</mat-option>
+    </mat-select>
+    <mat-error *ngIf="profilForm.controls['role'].invalid">Champ requis</mat-error>
+  </mat-form-field>
+
   <div class="ligne-boutons">
     <button class="button" (click)="onClickAnnuler()">Annuler</button>
-    <button class="button" (click)="onClickAjouter()">Ajouter</button>
+    <button class="button" (click)="onClickAjouter()" [disabled]="profilForm.invalid">Ajouter</button>
   </div>
 </div>
