--- a/QualiteLogicielFront/src/app/pages/profil/profil-list/profil-list.component.html
+++ b/QualiteLogicielFront/src/app/pages/profil/profil-list/profil-list.component.html
@@ -1,15 +1,18 @@
 <app-header></app-header>
 <div class="flex-center" style="flex-direction: column">
-    <app-input-field type="search" style="width: 400px" [(ngModel)]="search">Rechercher un matériel</app-input-field>
+    <div class="flex-center" style="flex-direction: column; margin-bottom: 20px">
+        <app-input-field type="search" style="width: 400px" [control]="formControl">Rechercher un matériel</app-input-field>
+        <button class="button" routerLink="/profil/add">Ajouter un profil</button>
+    </div>
     <div style="max-width: 1980px; width: 80%">
         <table mat-table [dataSource]="profilList" matSort style="max-width: 1980px">
             <ng-container matColumnDef="nom">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
-                <td mat-cell *matCellDef="let profil"> {{profil.nom}} </td>
+                <td mat-cell *matCellDef="let profil"> {{profil.lastname}} </td>
             </ng-container>
             <ng-container matColumnDef="prenom">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Prénom </th>
-                <td mat-cell *matCellDef="let profil"> {{profil.prenom}} </td>
+                <td mat-cell *matCellDef="let profil"> {{profil.firstname}} </td>
             </ng-container>
             <ng-container matColumnDef="email">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
