--- a/QualiteLogicielFront/src/app/pages/device/device-list/device-list.component.html
+++ b/QualiteLogicielFront/src/app/pages/device/device-list/device-list.component.html
@@ -2,10 +2,10 @@
 <div class="flex-center" style="flex-direction: column">
     <div class="flex-center" style="flex-direction: column; margin-bottom: 20px">
         <app-input-field type="search" style="width: 400px" [control]="formControl">Rechercher un matériel</app-input-field>
-        <button class="button" routerLink="/device/add">Ajouter un matériel</button>
+        <button *ngIf="authService.AuthenticatedUser.role.roleId == 1" class="button" routerLink="/device/add">Ajouter un matériel</button>
     </div>
     <div style="max-width: 1980px; width: 80%">
-        <table mat-table [dataSource]="deviceList" matSort style="max-width: 1980px">
+        <table mat-table [dataSource]="deviceList" class="mat-elevation-z8" matSort style="max-width: 1980px">
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
                 <td mat-cell *matCellDef="let device"> {{device.name}} </td>
@@ -23,7 +23,7 @@
                 <td mat-cell *matCellDef="let device"> {{device.phoneNumber}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let device; columns: displayedColumns;"></tr>
+            <tr mat-row (click)="onClickRow(device)" *matRowDef="let device; columns: displayedColumns;"></tr>
         </table>
     </div>
 </div>
