--- a/QualiteLogicielFront/src/app/pages/profil/profil-info/profil-info.component.html
+++ b/QualiteLogicielFront/src/app/pages/profil/profil-info/profil-info.component.html
@@ -12,5 +12,31 @@
         </mat-select>
         <mat-error *ngIf="profilForm.controls['role'].invalid">Champ requis</mat-error>
     </mat-form-field>
-    <button #button class="button" (click)="onClickModifier()">Modifier</button>
+    <div *ngIf="authService.AuthenticatedUser.role.roleId == 1" class="flex-center" style="gap: 20px">
+        <button #button class="button" [disabled]="profilForm.invalid" (click)="onClickModifier()">Modifier</button>
+        <button class="button" (click)="onClickSupprimer()">Supprimer</button>
+    </div>
+    <div style="max-width: 1980px; width: 80%">
+        <h3>Materiel emprunter</h3>
+        <table mat-table [dataSource]="bookList" matSort class="mat-elevation-z8" style="max-width: 1980px">
+            <ng-container matColumnDef="deviceName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom du matériel </th>
+                <td mat-cell *matCellDef="let book"> {{book.device.name}} </td>
+            </ng-container>
+            <ng-container matColumnDef="deviceRef">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Réfèrence du matériel </th>
+                <td mat-cell *matCellDef="let book"> {{book.device.deviceRef}} </td>
+            </ng-container>
+            <ng-container matColumnDef="startDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Date de début d'emprunt </th>
+                <td mat-cell *matCellDef="let book"> {{book.startDate | arrayNumberToDate | date: " d, MMMM, y, h:mm:ss"}} </td>
+            </ng-container>
+            <ng-container matColumnDef="endDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Date de rendu d'emprunt </th>
+                <td mat-cell *matCellDef="let book"> {{book.endDate | arrayNumberToDate | date: " d, MMMM, y, h:mm:ss"}} </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row (click)="onClickRow(book)" *matRowDef="let book; columns: displayedColumns;"></tr>
+        </table>
+    </div>
 </div>
