--- a/QualiteLogicielFront/src/app/pages/profil/profil-list/profil-list.component.html
+++ b/QualiteLogicielFront/src/app/pages/profil/profil-list/profil-list.component.html
@@ -2,10 +2,10 @@
 <div class="flex-center" style="flex-direction: column">
     <div class="flex-center" style="flex-direction: column; margin-bottom: 20px">
         <app-input-field type="search" style="width: 400px" [control]="formControl">Rechercher un matériel</app-input-field>
-        <button class="button" routerLink="/profil/add">Ajouter un profil</button>
+        <button *ngIf="authService.AuthenticatedUser.role.roleId == 1" class="button" routerLink="/profil/add">Ajouter un profil</button>
     </div>
     <div style="max-width: 1980px; width: 80%">
-        <table mat-table [dataSource]="profilList" matSort style="max-width: 1980px">
+        <table mat-table [dataSource]="profilList" matSort class="mat-elevation-z8" style="max-width: 1980px">
             <ng-container matColumnDef="nom">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
                 <td mat-cell *matCellDef="let profil"> {{profil.lastname}} </td>
@@ -23,7 +23,7 @@
                 <td mat-cell *matCellDef="let profil"> {{profil.matricule}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let profil; columns: displayedColumns;"></tr>
+            <tr mat-row (click)="onClickRow(profil)" *matRowDef="let profil; columns: displayedColumns;"></tr>
         </table>
     </div>
 </div>
