--- a/QualiteLogicielFront/src/app/pages/profil/profil-info/profil-info.component.html
+++ b/QualiteLogicielFront/src/app/pages/profil/profil-info/profil-info.component.html
@@ -29,11 +29,11 @@
             </ng-container>
             <ng-container matColumnDef="startDate">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Date de début d'emprunt </th>
-                <td mat-cell *matCellDef="let book"> {{book.startDate | arrayNumberToDate | date: " d, MMMM, y, h:mm:ss"}} </td>
+                <td mat-cell *matCellDef="let book"> {{book.startDate | arrayNumberToDate | date:" d, MMMM, y, HH:mm:ss"}} </td>
             </ng-container>
             <ng-container matColumnDef="endDate">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Date de rendu d'emprunt </th>
-                <td mat-cell *matCellDef="let book"> {{book.endDate | arrayNumberToDate | date: " d, MMMM, y, h:mm:ss"}} </td>
+                <td mat-cell *matCellDef="let book"> {{book.endDate | arrayNumberToDate | date: " d, MMMM, y, HH:mm:ss"}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row (click)="onClickRow(book)" *matRowDef="let book; columns: displayedColumns;"></tr>
